--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -33,7 +33,7 @@
       sortOrder="asc">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
-    <dxi-column dataField="PostalCode" [visible]="false"></dxi-column>
+    <dxi-column dataField="Email" [visible]="false"></dxi-column>
     <dxi-column dataField="MobilePhone"></dxi-column>
     <dxi-column dataField="Skype"></dxi-column>
 
