--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div id="app-container">
   <dx-tree-list id="treeList"
     [dataSource]="employees"
-    rootValue="-1"
+    [rootValue]="-1"
     keyExpr="ID"
     parentIdExpr="HeadID"
+    [autoExpandAll]="true"
     [allowColumnReordering]="true"
     [allowColumnResizing]="true"
     [columnAutoWidth]="true"
@@ -12,7 +13,10 @@
     <dxi-column dataField="FullName" [fixed]="true">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
-    <dxi-column dataField="Position">
+    <dxi-column 
+      dataField="Position"
+      sortOrder="asc"
+      type="required">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column
@@ -29,8 +33,7 @@
     </dxi-column>
     <dxi-column dataField="City"></dxi-column>
     <dxi-column
-      dataField="State"
-      sortOrder="asc">
+      dataField="State">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column dataField="Email" [visible]="false"></dxi-column>
@@ -52,9 +55,8 @@
     <dxo-row-dragging
       [onDragChange]="onDragChange"
       [onReorder]="onReorder"
-      [allowDropInsideItem]="allowDropInsideItem"
-      [allowReordering]="allowReordering"
-      [showDragIcons]="showDragIcons"
+      [allowDropInsideItem]="true"
+      [allowReordering]="true"
     ></dxo-row-dragging>
     
     <dxo-paging 
