--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -14,9 +14,7 @@
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column 
-      dataField="Position"
-      sortOrder="asc"
-      type="required">
+      dataField="Position">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column
@@ -33,7 +31,8 @@
     </dxi-column>
     <dxi-column dataField="City"></dxi-column>
     <dxi-column
-      dataField="State">
+      dataField="State"
+      sortOrder="asc">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column dataField="Email" [visible]="false"></dxi-column>
