--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -31,8 +31,7 @@
     </dxi-column>
     <dxi-column dataField="City"></dxi-column>
     <dxi-column
-      dataField="State"
-      sortOrder="asc">
+      dataField="State">
       <dxi-validation-rule type="required"></dxi-validation-rule>
     </dxi-column>
     <dxi-column dataField="Email" [visible]="false"></dxi-column>
